--- a/index.html
+++ b/index.html
@@ -446,70 +446,72 @@
          </div>    
       </section>
    </main>
-   <footer class="footer" id="contacts">
-        <div class="container container-footer">
-            <div class="footer-contact">
-                <a class="logo-footer link" href="./index.html"><b style="color:#2196F3">Web<span style="color:#ffffff;">Studio</span></b></a>
-                <address class="address white">г. Киев, пр-т Леси Украинки, 26</address>
-                <a class="link footer__contact-color email-footer" href="mailto:info@example.com">info@example.com</a>
-                <a class="link footer__contact-color tel-footer" href="tel:+380991111111">+38 099 111 11 11</a>
+   <footer class="page-footer" id="contacts">
+        <div class="container page-footer__container">
+            <div class="page-footer__contact">
+                <a class="page-footer__logo link" href="./index.html"><b style="color:#2196F3">Web<span style="color:#ffffff;">Studio</span></b></a>
+                <address class="page-footer__address white">
+                    г. Киев, пр-т Леси Украинки, 26
+                </address>
+                <a class="link page-footer__contact-info page-footer__email" href="mailto:info@example.com">info@example.com</a>
+                <a class="link page-footer__contact-info" href="tel:+380991111111">+38 099 111 11 11</a>
             </div>
-            <section class="footer-social">
-                <h3 class="footer-social-title white ">присоединяйтесь</h3>
-                <ul class="footer-socials-list list">
-                <li class="footer-socials-item">
-                        <a
-                            href=""
-                            class="footer-socials-link link"
-                        >
-                            <svg class="footer-socials-icon" width="20" height="20">
-                            <use
-                                    href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                            </svg>
-                        </a>
-                </li>
-                <li class="footer-socials-item">
-                        <a
-                            href=""
-                            class="footer-socials-link link"
-                        >
-                            <svg class="footer-socials-icon" width="20" height="20">
-                            <use
-                            href="./images/symbol-defs.svg#icon-twitter"
-                            ></use>
-                            </svg>
-                        </a>
-                </li>
-                <li class="footer-socials-item">
-                        <a
-                            href=""
-                            class="footer-socials-link link"
-                        >
-                            <svg class="footer-socials-icon" width="20" height="20">
-                            <use
-                            href="./images/symbol-defs.svg#icon-facebook"
-                            ></use>
-                            </svg>
-                        </a>
-                </li>
-                <li class="footer-socials-item">
-                        <a
-                            href=""
-                            class="footer-socials-link link"
-                        >
-                            <svg class="footer-socials-icon" width="20" height="20">
-                            <use
-                            href="./images/symbol-defs.svg#icon-linkedin"
-                            ></use>
-                            </svg>
-                        </a>
-                </li>
+            <section class="page-footer__social">
+                <h3 class="page-footer__social-title white ">присоединяйтесь</h3>
+                <ul class="page-footer__socials-list list">
+                    <li class="page-footer__socials-item">
+                            <a
+                                href=""
+                                class="page-footer__socials-link link"
+                            >
+                                <svg class="page-footer__socials-icon" width="20" height="20">
+                                <use
+                                        href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                </svg>
+                            </a>
+                    </li>
+                    <li class="page-footer__socials-item">
+                            <a
+                                href=""
+                                class="page-footer__socials-link link"
+                            >
+                                <svg class="page-footer__socials-icon" width="20" height="20">
+                                <use
+                                href="./images/symbol-defs.svg#icon-twitter"
+                                ></use>
+                                </svg>
+                            </a>
+                    </li>
+                    <li class="page-footer__socials-item">
+                            <a
+                                href=""
+                                class="page-footer__socials-link link"
+                            >
+                                <svg class="page-footer__socials-icon" width="20" height="20">
+                                <use
+                                href="./images/symbol-defs.svg#icon-facebook"
+                                ></use>
+                                </svg>
+                            </a>
+                    </li>
+                    <li class="page-footer__socials-item">
+                            <a
+                                href=""
+                                class="page-footer__socials-link link"
+                            >
+                                <svg class="page-footer__socials-icon" width="20" height="20">
+                                <use
+                                href="./images/symbol-defs.svg#icon-linkedin"
+                                ></use>
+                                </svg>
+                            </a>
+                    </li>
                 </ul>
             </section>
-            <section class="footer-email-client">
-                <h3 class="footer-email-title white ">Подпишитесь на рассылку</h3>
+            <section class="page-footer__client">
+                <h3 class="page-footer__title white ">Подпишитесь на рассылку</h3>
                 <div class="confirmation-email">
-                    <span class="input-wrap">
+                    <span>
                         <input
                             type="email"
                             name="email-confirmation"
@@ -517,9 +519,9 @@
                             class="footer-input"
                             placeholder="E-mail"/> 
                     </span>        
-                    <button class="footer__btn-email" type="submit">Подписаться
+                    <button class="page-footer__btn-email" type="submit">Подписаться
                         <span>
-                            <svg class="input-icon-email" width="24" height="24">
+                            <svg class="page-footer__icon" width="24" height="24">
                                 <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                             </svg> 
                         </span>
